[gd_scene load_steps=43 format=2]

[ext_resource path="res://other/fonts/roboto_mono_italic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/death_count.gd" type="Script" id=3]
[ext_resource path="res://scripts/lamp_count.gd" type="Script" id=4]
[ext_resource path="res://images/mainsprites/void/Mortes.png" type="Texture" id=5]
[ext_resource path="res://images/mainsprites/mirror/mirror.png" type="Texture" id=6]
[ext_resource path="res://images/mainsprites/memories/memories2.png" type="Texture" id=7]
[ext_resource path="res://images/mainsprites/memories/memories5.png" type="Texture" id=8]
[ext_resource path="res://images/mainsprites/memories/memories8.png" type="Texture" id=10]
[ext_resource path="res://other/gui/pressure.png" type="Texture" id=16]
[ext_resource path="res://other/gui/particle.png" type="Texture" id=17]
[ext_resource path="res://images/mainsprites/memories/memories1.png" type="Texture" id=18]
[ext_resource path="res://images/mainsprites/memories/memories3.png" type="Texture" id=19]
[ext_resource path="res://images/mainsprites/memories/memories6.png" type="Texture" id=20]
[ext_resource path="res://images/mainsprites/memories/memories7.png" type="Texture" id=22]
[ext_resource path="res://images/mainsprites/memories/memories4.png" type="Texture" id=23]
[ext_resource path="res://images/mainsprites/memories/memories9.png" type="Texture" id=24]
[ext_resource path="res://images/mainsprites/memories/memories10.png" type="Texture" id=25]
[ext_resource path="res://images/mainsprites/void/Lampiões.png" type="Texture" id=26]
[ext_resource path="res://scripts/gui.gd" type="Script" id=29]
[ext_resource path="res://scripts/pause.gd" type="Script" id=30]

[sub_resource type="DynamicFont" id=3]
size = 55
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 55
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 55
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 224, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 288, 0, 32, 64 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "PedaçosProgresso",
"speed": 0.0
} ]

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0.0350877, 0.245614, 0.675439, 1 )
colors = PoolColorArray( 0.764706, 0.764706, 0.764706, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0.258824 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=8]
lifetime_randomness = 0.37
flag_disable_z = true
direction = Vector3( 1, 100, 0 )
flatness = 0.13
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
angular_velocity = 76.8
angular_velocity_random = 0.55
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 96.0
angle_random = 0.29
scale = 0.5
scale_random = 0.68
color_ramp = SubResource( 6 )

[sub_resource type="DynamicFont" id=11]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 7 ), ExtResource( 19 ), ExtResource( 23 ), ExtResource( 8 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 10 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": false,
"name": "JeffMemorias",
"speed": 0.0
} ]

[sub_resource type="DynamicFont" id=12]
size = 120
font_data = ExtResource( 1 )

[node name="Gui" type="CanvasLayer"]
pause_mode = 2
layer = 4
script = ExtResource( 29 )
__meta__ = {
"_edit_horizontal_guides_": [ 0.0, 716.0, 360.0, 129.0, 575.0 ],
"_edit_vertical_guides_": [ 1273.0, 0.0, 1408.0, 2692.0, 2056.0, -127.0 ]
}

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 7.0
margin_bottom = 7.0
mouse_filter = 2

[node name="Borda1" type="ColorRect" parent="Control"]
margin_left = -120.0
margin_top = -67.0
margin_right = 1410.0
margin_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 1280, 50 )
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Borda2" type="ColorRect" parent="Control"]
margin_left = -120.0
margin_top = 657.0
margin_right = 1410.0
margin_bottom = 757.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 1280, 50 )
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Pressão" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 684, 360 )
scale = Vector2( 1.3, 1.2 )
texture = ExtResource( 16 )

[node name="Pause" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 30 )

[node name="ColorRect" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.172549, 0.172549, 0.172549, 0.662745 )

[node name="Tween" type="Tween" parent="Pause"]

[node name="MenuPause" type="Control" parent="Pause"]
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/MenuPause"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 61.0
margin_top = 24.0
margin_right = 429.0
margin_bottom = 493.0
rect_min_size = Vector2( 350, 0 )
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Pause/MenuPause/VBoxContainer"]
margin_right = 408.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 3 )
text = "InfinityVoid"

[node name="Control" type="Control" parent="Pause/MenuPause/VBoxContainer"]
margin_top = 103.0
margin_right = 408.0
margin_bottom = 103.0

[node name="Resume" type="Button" parent="Pause/MenuPause/VBoxContainer"]
margin_top = 133.0
margin_right = 408.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 1 )
text = "Retornar"

[node name="Save" type="Button" parent="Pause/MenuPause/VBoxContainer"]
margin_top = 236.0
margin_right = 408.0
margin_bottom = 309.0
custom_fonts/font = SubResource( 2 )
text = "Salvar"

[node name="Memories" type="Button" parent="Pause/MenuPause/VBoxContainer"]
margin_top = 339.0
margin_right = 408.0
margin_bottom = 412.0
custom_fonts/font = SubResource( 2 )
text = "Memorias"

[node name="Quit" type="Button" parent="Pause/MenuPause/VBoxContainer"]
margin_top = 442.0
margin_right = 408.0
margin_bottom = 515.0
custom_fonts/font = SubResource( 2 )
text = "Sair"

[node name="Control" type="Control" parent="Pause/MenuPause"]
margin_left = 168.0
margin_top = 582.0
margin_right = 351.0
margin_bottom = 663.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Pause/MenuPause/Control"]
margin_left = -104.0
margin_right = 69.0
margin_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Mortes2" type="Sprite" parent="Pause/MenuPause/Control/PanelContainer"]
position = Vector2( 131, 40 )
scale = Vector2( 6, 6 )
texture = ExtResource( 5 )

[node name="Mortes" type="Label" parent="Pause/MenuPause/Control/PanelContainer"]
margin_top = 3.0
margin_right = 173.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 9 )
text = "00"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer2" type="PanelContainer" parent="Pause/MenuPause/Control"]
margin_left = 131.0
margin_right = 304.0
margin_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Lampiao2" type="Sprite" parent="Pause/MenuPause/Control/PanelContainer2"]
position = Vector2( 131, 46 )
scale = Vector2( 6, 6 )
texture = ExtResource( 26 )

[node name="Lampiao" type="Label" parent="Pause/MenuPause/Control/PanelContainer2"]
margin_top = 3.0
margin_right = 173.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 9 )
text = "00"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Espelho" type="AnimatedSprite" parent="Pause/MenuPause"]
position = Vector2( 953, 352 )
scale = Vector2( 9, 9 )
frames = SubResource( 10 )
animation = "PedaçosProgresso"
playing = true

[node name="Particles2D" type="Particles2D" parent="Pause/MenuPause"]
position = Vector2( 949, 107 )
amount = 50
lifetime = 5.0
preprocess = 10.0
explosiveness = 0.12
randomness = 0.14
fixed_fps = 60
draw_order = 1
process_material = SubResource( 8 )
texture = ExtResource( 17 )

[node name="MenuMemorias" type="Control" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1412.0
margin_right = 1412.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voltar" type="Button" parent="Pause/MenuMemorias"]
margin_left = 599.0
margin_top = 25.0
margin_right = 689.0
margin_bottom = 85.0
custom_fonts/font = SubResource( 11 )
text = "<-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImagensMemorias" type="AnimatedSprite" parent="Pause/MenuMemorias"]
position = Vector2( 644, 361 )
scale = Vector2( 0.144, 0.144 )
frames = SubResource( 13 )
animation = "JeffMemorias"

[node name="Tras" type="Button" parent="Pause/MenuMemorias"]
margin_left = 345.0
margin_top = 281.0
margin_right = 465.0
margin_bottom = 438.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 12 )
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Frente" type="Button" parent="Pause/MenuMemorias"]
margin_left = 822.0
margin_top = 281.0
margin_right = 942.0
margin_bottom = 438.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 12 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Pause/MenuPause/VBoxContainer/Resume" to="Pause" method="_on_mouse_entered"]
[connection signal="pressed" from="Pause/MenuPause/VBoxContainer/Resume" to="Pause" method="_on_Resume_pressed"]
[connection signal="mouse_entered" from="Pause/MenuPause/VBoxContainer/Save" to="Pause" method="_on_mouse_entered"]
[connection signal="pressed" from="Pause/MenuPause/VBoxContainer/Save" to="Pause" method="_on_Save_pressed"]
[connection signal="mouse_entered" from="Pause/MenuPause/VBoxContainer/Memories" to="Pause" method="_on_mouse_entered"]
[connection signal="pressed" from="Pause/MenuPause/VBoxContainer/Memories" to="Pause" method="_on_Memories_pressed"]
[connection signal="mouse_entered" from="Pause/MenuPause/VBoxContainer/Quit" to="Pause" method="_on_mouse_entered"]
[connection signal="pressed" from="Pause/MenuPause/VBoxContainer/Quit" to="Pause" method="_on_Quit_pressed"]
[connection signal="mouse_entered" from="Pause/MenuMemorias/Voltar" to="Pause" method="_on_memories_mouse_entered"]
[connection signal="pressed" from="Pause/MenuMemorias/Voltar" to="Pause" method="_on_Voltar_pressed"]
[connection signal="mouse_entered" from="Pause/MenuMemorias/Tras" to="Pause" method="_on_memories_mouse_entered"]
[connection signal="pressed" from="Pause/MenuMemorias/Tras" to="Pause" method="_on_Tras_pressed"]
[connection signal="mouse_entered" from="Pause/MenuMemorias/Frente" to="Pause" method="_on_memories_mouse_entered"]
[connection signal="pressed" from="Pause/MenuMemorias/Frente" to="Pause" method="_on_Frente_pressed"]
